# malaysia-flood-risk-ai

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: main.py
app/: streamlit_app.py
configs/: data_gov_my_catalogue_candidates.json  data_gov_my_catalogue_review.json  data_gov_my_discovery_keywords.json  data_sources.yml  emdat_export_intake_plan.json  emdat_target_source_review.json  kaggle_experimental_baseline.json  kaggle_flood_baseline_training.json  kaggle_flood_model_benchmark.json  reliefweb_discovery_queries.json  source_research_shortlist.json  target_source_candidates.json
data/: README.md
docs/: AI_ENGINEERING_WORKFLOW.md  CURRENT_CAPABILITIES.md  DATA_ACQUISITION_PLAN.md  DATA_GOV_MY_CATALOGUE_REVIEW.md  DATA_GOV_MY_DISCOVERY.md  DATA_SOURCES.md  DATA_SOURCE_REVIEW_CHECKLIST.md  DEPLOYMENT.md  EMDAT_EXPORT_INTAKE.md  EMDAT_TARGET_SOURCE_REVIEW.md  GEOSPATIAL_DATA_SOURCES.md  GEOSPATIAL_FOUNDATION.md  KAGGLE_EXPERIMENTAL_BASELINE.md  METHODOLOGY.md  ML_TRAINING_READINESS.md  NOTEBOOKS.md  PHASE_2_DATA_ACQUISITION_PLAN.md  PROJECT_STATUS.md  RELEASES.md  RELIEFWEB_DISCOVERY.md  RUNBOOK.md  SOURCE_RESEARCH_SHORTLIST.md  TARGET_EVENT_SOURCE_SCHEMA.md  TARGET_EVENT_SOURCE_TEMPLATE.md  TARGET_LABEL_SOURCE_EVALUATION.md  TARGET_SOURCE_MANIFEST.md  TRAINING_DATASET.md  USAGE.md  V0_4_0_MILESTONE.md  WEATHER_PIPELINE.md
models/: README.md
notebooks/: 00_project_readiness.ipynb  README.md
reports/: data_gov_my_catalogue_plan.md  (+34 more)
(+195 files in other folders)
