[project]
name = "malaysia-flood-risk-ai"
version = "0.1.0"
description = "Malaysia-wide flood risk prediction and explainability platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Danish Syazani" }
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "api", "app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
